Fix path params issues
