# docs/swagger.json
@@ -67,8 +67,8 @@
                     {
                         "type": "integer",
                         "description": "New admin ID",
-                        "name": "id",
-                        "in": "header",
+                        "name": "user_id",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -109,6 +109,15 @@
                 ],
                 "summary": "Get admin by id",
                 "operationId": "get-admin-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "New admin ID",
+                        "name": "admin_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -147,6 +156,15 @@
                 ],
                 "summary": "Remove admin by id",
                 "operationId": "remove-admin-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Admin ID to delete",
+                        "name": "admin_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -324,6 +342,15 @@
                 ],
                 "summary": "Get cert by id",
                 "operationId": "get-cert-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cert ID to get",
+                        "name": "cert_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -362,6 +389,15 @@
                 ],
                 "summary": "Remove cert",
                 "operationId": "remove-cert-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cert ID to delete",
+                        "name": "cert_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -398,6 +434,13 @@
                 "summary": "Update cert",
                 "operationId": "update-cert-by-id",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cert ID to update",
+                        "name": "cert_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "cert data to update",
                         "name": "input",
@@ -534,6 +577,15 @@
                 ],
                 "summary": "Get diploma by id",
                 "operationId": "get-diploma-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Diploma ID to get",
+                        "name": "diploma_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -572,6 +624,15 @@
                 ],
                 "summary": "Remove diploma",
                 "operationId": "remove-diploma-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Diploma ID to delete",
+                        "name": "diploma_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -608,6 +669,13 @@
                 "summary": "Update diploma",
                 "operationId": "update-diploma-by-id",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Diploma ID to update",
+                        "name": "diploma_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "diploma data to update",
                         "name": "input",
@@ -744,6 +812,15 @@
                 ],
                 "summary": "Get group by id",
                 "operationId": "get-group-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID to get",
+                        "name": "group_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -782,6 +859,15 @@
                 ],
                 "summary": "Remove group",
                 "operationId": "remove-group-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID to delete",
+                        "name": "group_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -818,6 +904,13 @@
                 "summary": "Update group",
                 "operationId": "update-group-by-id",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID to update",
+                        "name": "group_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "group data to update",
                         "name": "input",
@@ -968,6 +1061,15 @@
                 ],
                 "summary": "Get homework by id",
                 "operationId": "get-homework-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Homework ID to get",
+                        "name": "homework_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1006,6 +1108,15 @@
                 ],
                 "summary": "Remove homework",
                 "operationId": "remove-homework-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Homework ID to delete",
+                        "name": "homework_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1042,6 +1153,13 @@
                 "summary": "Update homework",
                 "operationId": "update-homework-by-id",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Homework ID to update",
+                        "name": "homework_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "homework data to update",
                         "name": "input",
@@ -1178,6 +1296,15 @@
                 ],
                 "summary": "Get interview by id",
                 "operationId": "get-interview-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Interview ID to get",
+                        "name": "interview_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1216,6 +1343,15 @@
                 ],
                 "summary": "Remove interview",
                 "operationId": "remove-interview-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Interview ID to delete",
+                        "name": "interview_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1252,6 +1388,13 @@
                 "summary": "Update interview",
                 "operationId": "update-interview-by-id",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Interview ID to update",
+                        "name": "interview_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "interview data to update",
                         "name": "input",
@@ -1344,8 +1487,8 @@
                     {
                         "type": "integer",
                         "description": "New mentor ID",
-                        "name": "id",
-                        "in": "header",
+                        "name": "user_id",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -1386,6 +1529,15 @@
                 ],
                 "summary": "Get mentor by id",
                 "operationId": "get-mentor-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Mentor ID to get",
+                        "name": "mentor_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1424,6 +1576,15 @@
                 ],
                 "summary": "Remove mentor by id",
                 "operationId": "remove-mentor-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Mentor ID to delete",
+                        "name": "mentor_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1550,6 +1711,15 @@
                 ],
                 "summary": "Get student by id",
                 "operationId": "get-student-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Student ID to get",
+                        "name": "student_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1588,6 +1758,15 @@
                 ],
                 "summary": "Remove student by id",
                 "operationId": "remove-student-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Student ID to delete",
+                        "name": "student_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1625,6 +1804,15 @@
                 ],
                 "summary": "Get certs by student ID",
                 "operationId": "get-certs-by-student-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Student ID",
+                        "name": "student_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1668,6 +1856,15 @@
                 ],
                 "summary": "Get diploma by student ID",
                 "operationId": "get-diploma-by-student-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Student ID",
+                        "name": "student_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1708,6 +1905,15 @@
                 ],
                 "summary": "Get homework grades by student ID",
                 "operationId": "get-hw-grades-by-student-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Student ID",
+                        "name": "student_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1751,6 +1957,15 @@
                 ],
                 "summary": "Get interview by student ID",
                 "operationId": "get-interview-by-student-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Student ID",
+                        "name": "student_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1880,6 +2095,15 @@
                 ],
                 "summary": "Get user by ID",
                 "operationId": "get-user-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID to get",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1918,6 +2142,15 @@
                 ],
                 "summary": "Remove user by id",
                 "operationId": "remove-user-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID to delete",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1954,6 +2187,13 @@
                 "summary": "Update user by id",
                 "operationId": "update-user-by-id",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID to update",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "user data to update",
                         "name": "input",
